# claudebot-mcp

./: .env.example  .gitignore  Cargo.toml  HETZNER_SETUP.md  README.md  build.rs  deploy.sh  static_context.txt  test_local.sh
.claude/commands/: circle.md  review.md  security.md
.github/workflows/: ci.yml
configs/: CLAUDE.md
context/: ELIOT.md
deploy/: .env.claudebot.template  claudebot-bridge.service  claudebot-telegram.service  deploy.sh  setup-server.sh
docs/: ARCHITECTURE-V2.md  BYPASS.md  MEMORY.md  REMOTE-ACCESS.md  ROADMAP-CLAUDEBOT-V2.md  ROADMAP-WEB-DASHBOARD.md
frontend/: .gitignore  app.vue  dist  nuxt.config.ts  package-lock.json  package.json
frontend/assets/scss/: _mixins.scss  _variables.scss  main.scss
frontend/components/: ActionButton.vue  AppHeader.vue  LogViewer.vue  MessageList.vue  MetricBar.vue  StatCard.vue  StatusRow.vue
frontend/composables/: useApi.ts  useSSE.ts
frontend/pages/: index.vue
frontend/types/: api.ts
proto/: claudebot_bridge.proto
scripts/: claudebot-bridge.service  claudebot-telegram.service  deploy-hetzner.sh  deploy.sh  setup-tailscale.sh
src/: auto_review.rs  cache.rs  circle.rs  claude.rs  config.rs  conversation.rs  coordinator.rs  embeddings.rs  feedback.rs  git_ops.rs  graph.rs  lib.rs  lifecycle.rs  llama_worker.rs  main.rs  mcp.rs  memory.rs  metrics.rs  permissions.rs  preflight.rs  prom_metrics.rs  router.rs  telegram.rs  telegram_tests.rs  telegram_ui.rs  tokenizer.rs  tools.rs  usage.rs  vault.rs  worker_pool.rs
src/agent/: mod.rs  orchestrator.rs  planner.rs  recovery.rs  reflection.rs  scheduler.rs  streaming.rs  tools.rs
src/autonomous/: background.rs  context_manager.rs  feedback_loop.rs  goals.rs  learner.rs  mod.rs
src/bridge/: grpc_client.rs  grpc_server.rs  mod.rs  proto.rs  types.rs
src/browser/: mod.rs  pool.rs  tools.rs
src/channels/: discord.rs  mod.rs  rate_limit.rs  traits.rs  webchat.rs  whatsapp.rs
src/dashboard/: auth.rs  config.rs  mod.rs  server.rs
src/dashboard/api/: config.rs  health.rs  logs.rs  mod.rs  network.rs  skills.rs  status.rs  stream.rs  users.rs
src/dashboard/static/: .gitkeep  404.html
src/dashboard/static/_nuxt/: BbUpFEVZ.js  D9f_sRb2.js  DWTcwF5q.js  entry.C1VjdxFa.css  h6C6ZyYT.js  index.C62vO8j_.css
src/dashboard/static/_nuxt/builds/: latest.json
src/dashboard/static/_nuxt/builds/meta/: 64e20839-1d0f-444e-88ba-4a22216cc484.json
src/skills/: generator.rs  loader.rs  mod.rs  registry.rs  sandbox.rs  types.rs
tests/: backfill_prod_test.rs  conversation_test.rs  e2e_telegram.sh  grpc_test.rs  memory_hybrid_test.rs  telegram_integration_test.rs
