[package]
name = "claudebot-mcp"
version = "0.1.0"
edition = "2021"
description = "ClaudeBot MCP Server - All-Rust Model Context Protocol for Claude Code"
authors = ["Eliot <eliot@velofi.io>"]
license = "MIT"

[workspace]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal", "process", "io-std"] }
futures-util = "0.3"

# MCP Protocol (JSON-RPC 2.0)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (Memory + Graph)
rusqlite = { version = "0.32", features = ["bundled", "blob"] }

# HTTP client (Claude API + Ollama)
reqwest = { version = "0.12", features = ["json", "stream"] }

# HTTP server (Bridge API)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# gRPC (Bridge with streaming + TLS)
tonic = { version = "0.12", features = ["tls", "tls-roots", "channel"] }
prost = "0.13"
tokio-stream = { version = "0.1", features = ["net", "sync"] }

# Redis for task coordination
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "streams"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"
once_cell = "1"
shellexpand = "3"

# Caching
moka = { version = "0.12", features = ["future"] }

# Vector search (HNSW approximate nearest neighbor)
hnsw = "0.11"
space = "0.17"

# Telegram Bot
teloxide = { version = "0.13", features = ["macros"] }

# Encryption (Credential Vault)
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }
dirs = "5"

# Authentication (Dashboard)
argon2 = "0.5"
jsonwebtoken = "9"
tower_governor = "0.4"
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
cookie = "0.18"
parking_lot = "0.12"

# Git operations (native)
git2 = "0.19"

# Async traits
async-trait = "0.1"

# TOML parsing (for skills)
toml = "0.8"

# Static file embedding (for dashboard)
rust-embed = "8"
mime_guess = "2"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[lib]
name = "claudebot_mcp"
path = "src/lib.rs"

[[bin]]
name = "claudebot-mcp"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
